--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-query": "^5.77.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-query": "^5.77.2",
+    "antd": "^5.25.3",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
