--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.79.2",
+    "@types/styled-components": "^5.1.34",
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.18",
     "yup": "^1.6.1"
   },
   "devDependencies": {
