--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.79.2",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.25.3",
+    "antd-img-crop": "^4.25.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
