--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.18",
+    "vietnam-provinces": "^0.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
