--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd-img-crop": "^4.25.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
@@ -31,7 +32,8 @@
     "slugify": "^1.6.6",
     "styled-components": "^6.1.18",
     "vietnam-provinces": "^0.0.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
