--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "dayjs": "^1.11.13",
+    "html-truncate": "^1.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
@@ -30,6 +31,7 @@
     "react-router-dom": "^7.6.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.18",
     "vietnam-provinces": "^0.0.4",
     "yup": "^1.6.1",
