--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=http://localhost:3000/api
+VITE_GOOGLE_CLIENT_ID=126453956462-kcj6v28k9k3fqaagh8olbkv8tojesj9l.apps.googleusercontent.com
