--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/charts": "^2.3.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@hookform/resolvers": "^5.0.1",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.79.2",
