--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.18",
+    "use-debounce": "^10.0.6",
     "vietnam-provinces": "^0.0.4",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
